# server.js
@@ -4,7 +4,7 @@ const bodyParser = require('body-parser');
 const mongodb = require('./data/database');
 
 const app = express();
-const port = process.env.PORT || 3000;
+const port = process.env.PORT || 3001;
 
 // Middleware
 app.use(bodyParser.json());
